# Aurora

./: Cargo.toml  Makefile  README.md  index.html  rustfmt.toml
assets/: drjamgo_hexplus_map.tmx  lato-light.kttf  untitled.gltf
assets/map/: clouds_skybox.glb  coral-skybox.glb  crystal.gltf  globe.glb  tooine_skybox.glb  tower.glb  tower.gltf
assets/models/: barrel.gltf  platform.gltf  sword.gltf
assets/models/AlienCake/: alien.glb  alien.gltf
assets/models/animated/: fox.gltf
src/: components.rs  main.rs
src/camera/: compontents.rs  mod.rs  systems.rs
src/collision/: compontents.rs  mod.rs  systems.rs
src/game/: components.rs  ingame.rs  loading.rs  mod.rs  systems.rs
src/helpers/: mod.rs
src/inventory/: mod.rs  systems.rs
src/levels/: components.rs  level_one.rs  level_two.rs  mod.rs  state_machine.rs
src/map/: mod.rs  systems.rs
src/menu/: button.rs  mod.rs  systems.rs
src/npc/: components.rs  mod.rs  npc_emo.rs  state_machine.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/puzzles/: components.rs  mod.rs  state_machine.rs  systems.rs
src/skymap/: compontents.rs  mod.rs  resources.rs  systems.rs
