[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.10.1", features=["jpeg"] }
bevy = "0.10.1"
bevy_asset_loader = "0.16.0"
bevy-ui-navigation = "0.24.0"
leafwing-input-manager = "0.9.2"

anyhow = "*"
bevy_ecs_tilemap = "0.10.0"
tiled = "0.10.0"
# ai stuff https://github.com/zkat/big-brain
# networking https://crates.io/crates/bevy_backroll or https://lib.rs/crates/naia-bevy-server

# https://github.com/IyesGames has a lot of nice things

