[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.10.1", features=["jpeg"] }
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_asset_loader = "0.16.0"
bevy_egui = "0.20.3"
bevy_panorbit_camera = "0.4.1"
bevy_rapier3d = { version = "*", features = [ "debug-render-3d" ] }
seldom_state = "0.6.1"
# bevy-ui-navigation = "0.24.0"
# leafwing-input-manager = "0.9.2"
#
# anyhow = "*"
# ai stuff https://github.com/zkat/big-brain
# networking https://crates.io/crates/bevy_backroll or https://lib.rs/crates/naia-bevy-server

# https://github.com/IyesGames has a lot of nice things

